# slither-bot

./: slither.cabal  stack.yaml
app/: slither-proxy.hs
reference/: game_source.js
src/: Main.hs
src/SlitherBot/: Ai.hs  GameState.hs  Prelude.hs  Protocol.hs  Proxy.hs  UtilityGrid.hs
src/SlitherBot/Ai/: Avoid.hs  Circle.hs  Search.hs
