name:                slither
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/slither#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SlitherBot.Protocol
                     , SlitherBot.Proxy
                     , SlitherBot.GameState
                     , SlitherBot.Ai
                     , SlitherBot.Ai.Circle
                     , SlitherBot.Ai.Avoid
  default-language:    Haskell2010
  build-depends:       base
                     , cereal
                     , classy-prelude
                     , bytestring
                     , monad-loops
                     , websockets
                     , network-uri
                     , async
                     , containers
                     , unordered-containers
                     , hashable
                     , wai
                     , warp
                     , wai-websockets
                     , http-types
                     , linear
                     , lens
                     , vector
                     , opencv
                     , mtl
                     , lucid
                     , text
                     , base64-bytestring
                     , safe-exceptions
  ghc-options:         -Wall
  default-language:    Haskell2010

executable slither-proxy
  hs-source-dirs:      app
  main-is:             slither-proxy.hs
  ghc-options:         -Wall
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, slither
  default-language:    Haskell2010
